--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A little fairy</title>
+    <title>aww cutie pie</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>...</h1>
+    <h1>Baby Doll 🤩🤩</h1>
 
 <video width="99%" height="50%" controls>
   <source src="movie.mp4" type="video/mp4">
