--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
     <h1>Baby Doll 🤩🤩</h1>
 
-<video width="99%" height="50%" controls>
+
+
+
+
+
+
+<video width="99%" height="50%">
   <source src="movie.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
