--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-<video width="99%" height="50%" autoplay>
+<video width="99%" height="50%" autoplay controls>
   <source src="movie.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
